# ETL-Process-Sample

./: README.md  file1.py  file2.py  file3.py  pyproject.toml
data/: top-symbols-max-most-1402-10-02.csv  top-symbols-max-most-1402-10-03.csv  top-symbols-max-most-1402-10-04.csv  top-symbols-max-most-1402-10-05.csv  top-symbols-max-most-1402-10-06.csv  top-symbols-max-most-1402-10-09.csv  top-symbols-max-most-1402-10-10.csv  top-symbols-quantity-number-1402-10-02.csv  top-symbols-quantity-number-1402-10-03.csv  top-symbols-quantity-number-1402-10-04.csv  top-symbols-quantity-number-1402-10-05.csv  top-symbols-quantity-number-1402-10-06.csv  top-symbols-quantity-number-1402-10-09.csv  top-symbols-quantity-number-1402-10-10.csv  top-symbols-values-value-1402-10-02.csv  top-symbols-values-value-1402-10-03.csv  top-symbols-values-value-1402-10-04.csv  top-symbols-values-value-1402-10-05.csv  top-symbols-values-value-1402-10-06.csv  top-symbols-values-value-1402-10-09.csv  top-symbols-values-value-1402-10-10.csv
stage/: 1402-10-02.csv  1402-10-02.xlsx  1402-10-03.csv  1402-10-03.xlsx  1402-10-04.csv  1402-10-04.xlsx  1402-10-05.csv  1402-10-05.xlsx  1402-10-06.csv  1402-10-06.xlsx  1402-10-09.csv  1402-10-09.xlsx  1402-10-10.csv  1402-10-10.xlsx
