[tool.poetry]
name = "filoger-hw1"
version = "1.0.0"
description = "ETL-Python"
authors = ["Mohammad <mohammadshamsuddin80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
logging = "^0.4.9.6"
datetime = "^5.4"
requests = "^2.31.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
